<resources>
    <string name="app_name">Thing To Do</string>
    <string name="tasks">Tasks</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="item_count">%s Items</string>
    <string name="create_new_task">Create New Task</string>
    <string name="task_name">Task Name</string>
    <string name="task_note">Task Note</string>
    <string name="priority">Priority</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="notification">Notification</string>
    <string name="create_task">Create Task</string>
    <string name="attachment_file">Attachment File</string>
    <string name="tap_to_add_files">Tap to add files</string>
    <string name="delete">Delete</string>
    <string name="date_create_task">%d/%d/%d</string>
</resources>
